Corrige e implementa cosas
